## Process this file with automake to produce Makefile.in

# The "testprogram" here is merely part of a framework to check that
# a reasonably full set of development resources are available for
# building the CSL version of Reduce.


lib_LIBRARIES = libwindow.a
libwindow_a_SOURCES = window.cpp

noinst_PROGRAMS = testprogram
testprogram_SOURCES = testprogram.cpp
testprogram_LDADD = libwindow.a

# end of Makefile.am


